...
                if viewModel.isLoading {
                    progressView
                        .accessibilityIdentifier("ProgressView")
                }
                if viewModel.searchResults.isEmpty && !viewModel.isLoading {
                    EmptyView(message: "Start typing to see results...")
                        .accessibilityIdentifier("Empty")
                }
                List(viewModel.searchResults, id: \.self) { result in
                    rowItem(repoItem: result)
                }
                .disabled(viewModel.isLoading)
            }
            .searchable(text: $viewModel.searchText, placement: .navigationBarDrawer(displayMode: .always))
            .navigationTitle("Search")
        }
    }
    
    /// View to show view is loading
    @ViewBuilder
    var progressView: some View {
...
